--- a/primera_web/src/templates/about.html
+++ b/primera_web/src/templates/about.html
@@ -5,6 +5,8 @@
     
 </h1> 
 <h1>
-    De ahora en adelante debes levantarte temprano
+    De ahora en adelante debes levantarte temprano.
+    Te amo Mucho.
+    Gracias por tu compromiso.
 </h1> 
 {% endblock %}
