--- a/primera_web/src/templates/layout.html
+++ b/primera_web/src/templates/layout.html
@@ -26,6 +26,9 @@
                     <a class="nav-link" href="/">Home </a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('compromisos') }}">Compromisos</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ url_for('about') }}">About</a>
                 </li>
 
